Update to the latest version of the biscuit-util package and use the new Recipe API

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
   <head>
-    <title>angular-web.recipe</title>
+    <title>angular-web.recipe!</title>
     <link rel="stylesheet" type="text/css" href="{{cache-break:styles.css}}">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
   </head>
